# basex

./: .gitignore  CMakeLists.txt  README.md  color.c  color.h  font_ansi_shadow.c  font_ansi_shadow.h  log.c  log.h  main.c  platform.c  platform.h  version.h.in
.github/workflows/: release.yml
